--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "homepage": "https://github.com/nicholaspsmith/mmoserver#readme",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "node server.js --env='test'",
+    "prod": "node server.js --env='production'"
   },
   "description": "An MMO Server",
   "main": "server.js",
@@ -19,6 +21,7 @@
     "extend": "3.0.1",
     "minimist": "1.2.0",
     "mongoose": "5.1.1",
+    "performance-now": "2.1.0",
     "underscore": "1.9.0"
   },
   "repository": {
